--- a/plankton.html
+++ b/plankton.html
@@ -36,7 +36,7 @@
                     >
                     <h2>Video: Introduction to Plankton</h2>
                     <video width="560" height="315" controls>
-                        <source src="planktonn.mp4" type="video/mp4">
+                        <source src="plankton video.mp4" type="video/mp4">
                         <source src="movie.ogg" type="video/ogg">
                       Your browser does not support the video tag.
                     </video>
